--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,20 @@ uos_data/
 cwru_data/
 data_scenario1/
 data_scenario2/
+cache/
+checkpoints/
 
 # 데이터 파일들
 *.mat
 # *.txt
-*.csv
+# *.csv
 *.json
 *.png
-*.jpg
-*.jpeg
+*.log 
 
 # 학습 결과물들
-checkpoints/
-results/
+# checkpoints/
+# results/
 
 # Python 관련
 __pycache__/
@@ -23,26 +24,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# 가상환경
-venv/
-env/
-ENV/
 
 # IDE 관련
 .vscode/
@@ -51,23 +32,5 @@ ENV/
 *.swo
 *~
 
-# OS 관련
-.DS_Store
-Thumbs.db
-
 # 임시 파일들
 *.tmp
-*.bak
-*.log
-
-
-# 실험 관련 임시 파일들
-*.pth
-*.pt
-*.pkl
-*.pickle
-
-# 압축 파일들
-*.zip
-*.tar.gz
-*.rar
